# TicTacToe

./: .gitignore  CMakeLists.txt  README.md  TicTacToe.cpp  display.cpp  player.h
include/core/: board.h  logic.h
include/players/: computer.h
include/ui/: display.h
src/: TicTacToe.cpp  board.cpp  logic.cpp
src/players/: computer.cpp  player.cpp
